[project]
name = "prep"
version = "0.1.6"
description = "Rekordbox music library preparation pipeline"
requires-python = ">=3.10"
dependencies = ["mutagen>=1.47"]

[project.scripts]
prep = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prep"]
